--- a/src/styles/icon-styles/icon-styles.css
+++ b/src/styles/icon-styles/icon-styles.css
@@ -1,1 +1,78 @@
-/*# sourceMappingURL=icon-styles.css.map */
+.icon {
+  background-color: #fff;
+}
+
+.icon-container {
+  display: block;
+  white-space: nowrap;
+  max-width: 110rem;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  padding: 2.5rem 0;
+  overflow-x: scroll;
+  overflow-y: hidden; /* Hide vertical scrollbar */
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+
+.icon-container::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
+
+.icon-content {
+  white-space: normal;
+  margin: 0 1rem;
+  width: 11.5rem;
+  display: inline-block;
+  vertical-align: top;
+  text-align: center;
+  cursor: pointer;
+}
+
+.icon-img-container {
+  border-radius: 50%;
+  width: 5.3rem;
+  height: 5.3rem;
+  margin: 0 auto 5px auto;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #d40029;
+  transition: ease all 0.4s;
+}
+.icon-img-container:hover {
+  animation: pulse-animation 1.3s infinite;
+}
+.icon-img-container .category-icon-svgcontainer {
+  animation: pulse-animation 1.3s infinite;
+}
+.icon-img-container .hover-pulsing {
+  animation: pulse-animation 1.3s infinite;
+}
+@keyframes pulse-animation {
+  0% {
+    box-shadow: 0 0 0 0 rgba(212, 0, 41, 0.3);
+  }
+  100% {
+    box-shadow: 0 0 0 20px transparent;
+  }
+}
+.icon-img-container:hover {
+  transform: scale(1.1);
+}
+.icon-img-container .icon-image {
+  width: 3.6rem;
+  height: 3.6rem;
+}
+
+.icon-content.active .icon-img-container {
+  animation: pulse-animation 1.3s infinite;
+}
+
+.icon-title {
+  color: #000;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 400;
+}/*# sourceMappingURL=icon-styles.css.map */
