--- a/src/styles/global-styles/global-styles.scss
+++ b/src/styles/global-styles/global-styles.scss
@@ -18,3 +18,12 @@ $cursorPointer: pointer;
     margin: 0 auto;
     text-align: center;
 }
+
+@mixin scrollHorizontal {
+    white-space: nowrap;
+    overflow-x: scroll;
+    overflow-y: hidden; /* Hide vertical scrollbar */
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+}
+
