--- a/src/styles/icon-styles/icon-styles.scss
+++ b/src/styles/icon-styles/icon-styles.scss
@@ -7,13 +7,14 @@
 
 .icon-container {
     display: block;
-    white-space: nowrap;
+    padding: 2.5rem 0 1.5rem 0;
     @include marginCenter;
-    padding: 2.5rem 0;
-    overflow-x: scroll;
-    overflow-y: hidden; /* Hide vertical scrollbar */
-    -ms-overflow-style: none;  /* Internet Explorer 10+ */
-    scrollbar-width: none;  /* Firefox */
+    @include scrollHorizontal;
+    user-select: none;
+
+    @media screen and (min-width: 768px) {
+        user-select: auto;
+    }
 }
 
 .icon-container::-webkit-scrollbar {
