--- a/src/styles/pills-styles/pills-styles.css
+++ b/src/styles/pills-styles/pills-styles.css
@@ -1,5 +1,4 @@
 .pills {
-  margin: 0 2rem;
   text-align: center;
 }
 
@@ -9,6 +8,10 @@
   overflow-y: hidden; /* Hide vertical scrollbar */
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
+  max-width: 110rem;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
   padding: 0 0 1.5rem 0;
 }
 @media screen and (min-width: 768px) {
@@ -28,13 +31,20 @@
   color: #000;
   background: #fff;
   border: 1px solid #d1d1d1;
-  display: inline-block;
+  visibility: hidden;
   border-radius: 2rem;
   text-decoration: none;
-  transition: ease all 0.4s;
+  transition: opacity 0.7s ease, transform 0.7s ease;
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
+  opacity: 0;
+  transform: translateY(-10px);
+}
+.pills-link.pills-display {
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0);
 }
 .pills-link:hover {
   background: #eee;
