Completed my store opportunities section

--- a/src/styles/global-styles/global-styles.scss
+++ b/src/styles/global-styles/global-styles.scss
@@ -5,6 +5,7 @@ $aceHelpfulRed: #d40029;
 
 //Font Family
 $fontRobotoCondensed: 'Roboto Condensed', sans-serif;
+$fontRobotoSlab: 'Roboto Slab', serif;
 
 //Font Weight
 $fontWeight400: 400;
