--- a/src/styles/pills-styles/pills-styles.scss
+++ b/src/styles/pills-styles/pills-styles.scss
@@ -26,31 +26,31 @@
     color: #000;
     background: #fff;
     border: 1px solid #d1d1d1;
-    visibility: hidden;
+    display: none;
     -webkit-border-radius: 2rem;
     -moz-border-radius: 2rem;
     border-radius: 2rem;
     text-decoration: none;
-    transition: opacity 0.7s ease, transform 0.7s ease;
+    -webkit-transition: ease all .4s;
+    -moz-transition: ease all .4s;
+    transition: ease all .4s;
+    -webkit-user-select: none;
+    -moz-user-select: none;
     user-select: none;
-    opacity: 0;
-    transform: translateY(-10px);
-
-    &.pills-display {
-        visibility: visible;
-        opacity: 1;
-        transform: translateY(0);
-    }
-
+  
     &:hover {
         background: #eee;
         cursor: $cursorPointer;
     }
 }
 
+.pills-display {
+    display: inline-block;
+}
+ 
 
 
-// .pills-display {
-//     display: inline-block;
-// }
+
+
+
 
