--- a/src/styles/store-opportunities-styles/store-opportunities.styles.scss
+++ b/src/styles/store-opportunities-styles/store-opportunities.styles.scss
@@ -22,5 +22,10 @@
         display: inline-block;
         color: $white;
         font-size: 1.4rem;
+        transition: ease all .4s;
+
+        &:hover {
+            color: #d1d1d1;
+        }
     }
 }
