--- a/src/styles/global-styles/global-styles.scss
+++ b/src/styles/global-styles/global-styles.scss
@@ -4,6 +4,7 @@ $black: #000;
 $aceHelpfulRed: #d40029;
 
 //Font Family
+$fontRoboto: 'Roboto', sans-serif;
 $fontRobotoCondensed: 'Roboto Condensed', sans-serif;
 $fontRobotoSlab: 'Roboto Slab', serif;
 
@@ -18,6 +19,12 @@ $cursorPointer: pointer;
     width: 100%;
     margin: 0 auto;
     text-align: center;
+}
+
+@mixin flexCenter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @mixin scrollHorizontal {
