--- a/src/styles/footer-styles/footer-styles.scss
+++ b/src/styles/footer-styles/footer-styles.scss
@@ -2,20 +2,44 @@
 
 /////// Footer Section ///////
 .footer {
-    background-color: #424242;
+    display: flex;
+    justify-content: start;
+    background-color: $gray42;
     color: $white;
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        justify-content: center;
+        background-color: $gray42;
+        color: $white;
+    }
 }
 
 .footer-container {
-    display: flex;
-    justify-content: space-between;
-    @include marginCenter;
+    display: initial;
+    margin: 0 2rem;
     padding: 5.5rem 0;
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        justify-content: space-between;
+        max-width: 115rem;
+        width: 100%;
+        margin: 0 2rem;
+        text-align: center;
+        padding: 5.5rem 0 1.5rem 0;
+
+    }
 }
 
 .footer-col {
-    text-align: left;
-    font-size: 1.8rem;
+    margin-bottom: 4rem;
+
+    @media screen and (min-width: 768px) {
+        margin: 0 2rem 4rem 0;
+        text-align: left;
+        font-size: 1.8rem;
+    }
 }
 
 .footer-title {
@@ -24,13 +48,13 @@
     font-size: 2.4rem;
 }
 
-.footer-contact, .footer-message {
-    display: flex;
-    align-items: center;
-}
-
 .footer-contact {
     margin-bottom: 2.3rem;
+
+    @media screen and (min-width: 1033px) {
+        display: flex;
+        align-items: center;
+    }
 }
 
 .footer-number {
@@ -39,7 +63,22 @@
 }
 
 .footer-message {
+    display: flex;
+    align-items: center;
     margin-bottom: 3.8rem;
+}
+
+.footer-message-content {
+    background-image: linear-gradient(currentColor, currentColor);
+    background-position: 0 100%;
+    background-repeat: no-repeat;
+    background-size: 0 2px;
+    transition: background-size cubic-bezier(0, .5, 0, 1) .3s;
+
+    &:hover {
+        background-size: 100% 2px;
+        cursor: $cursorPointer;
+    }
 }
 
 .footer-hours-title, .footer-day-time, .footer-sun-tues {
