Completed modal redux toolkit implementation

--- a/src/styles/global-styles/global-styles.scss
+++ b/src/styles/global-styles/global-styles.scss
@@ -12,6 +12,9 @@ $fontRobotoSlab: 'Roboto Slab', serif;
 //Font Weight
 $fontWeight400: 400;
 
+//Effects
+$transitionSmooth: all .4s ease;
+
 $cursorPointer: pointer;
 
 // Mixins
