--- a/src/styles/modal-styles/modal-styles.scss
+++ b/src/styles/modal-styles/modal-styles.scss
@@ -2,68 +2,215 @@
 
 /////// Modal Popup ///////
 .modal {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); // Optional: to add a semi-transparent background
-    z-index: 1000; // Ensure the modal is on top of other elements
-    padding: 2rem; // Remove the margin to center it properly
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0 2rem;
+  background-color: rgba(0, 0, 0, 0.5); // Optional: to add a semi-transparent background
+  z-index: 1000; // Ensure the modal is on top of other elements
+  overflow-y: auto; // Enable scrolling for the modal
 }
 
 .modal-container {
-    max-width: 86rem;
-    width: 100%;
-    height: 60.3rem;
-    background-color: $white;
+  max-width: 86rem;
+  width: 100%;
+  height: auto;
+  margin: 3rem auto 2rem auto;
+  background-color: $white;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+}
+
+.modal-show {
+    display: block;
 }
 
 .modal-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 7.8rem;
-    padding: 0 3rem;
-    background-color: $aceHelpfulRed;
-    color: $white;
-    font-size: 2.6rem;
-    font-family: $fontRobotoSlab;
-    font-weight: 500;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 7.8rem;
+  padding: 0 3rem;
+  background-color: $aceHelpfulRed;
+  color: $white;
+  font-size: 2.6rem;
+  font-family: $fontRobotoSlab;
+  font-weight: 500;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
 }
 
 .modal-content {
   padding: 3rem;
 }
 
+.modal-critical-content, .modal-contact-content {
+  color: $black;
+  font-size: 2.1rem;
+}
+
+.modal-critical-content {
+  margin-bottom: 1.2rem;
+  font-weight: $fontWeight400;
+}
+
+.modal-contact-content, .help {
+  font-weight: 700;
+}
+
+.modal-contact-content {
+  margin-bottom: 2.1rem;
+}
+
+.modal-contact-number {
+  text-decoration: none;
+  color: $black;
+}
+
+.modal-help {
+  color: $black;
+  font-size: 2.8rem;
+}
+
+.modal-form {
+  padding-left: .1rem;
+}
+
+.modal-message {
+  margin-top: 1.2rem;
+  padding: .5rem;
+  width: 100%;
+  max-width: 88rem;
+  height: 10rem;
+  border: 1px solid #919191;
+  color: $black;
+  font-family: $fontRoboto;
+  font-size: 2.1rem;
+}
+
+.modal-input-label {
+  width: 100%;
+}
+
+.modal-input-label label {
+  display: block;
+  margin-bottom: 1rem;
+  color: #707070;
+  font-size: 18px;
+  font-weight: 400;
+  font-family: Roboto;
+}
+
+.modal-input-label input {
+  width: 100%;
+  height: 5rem;
+  margin-right: .2rem;
+  padding: 1rem;
+  font-size: 17px;
+}
+
+.modal-input-label input:first-child {
+  margin-right: 2rem;
+}
+
+.modal-input-label label span {
+  color: $aceHelpfulRed;
+}
+
+.modal-btn-container {
+  display: flex; 
+  justify-content: space-around;
+  margin-top: 1.7rem;
+}
+
+.modal-btn {
+  height: 5rem;
+  width: 100%;
+  max-width: 23.7rem;
+  color: $white;
+  border: none;
+  font-family: $fontRoboto;
+  font-size: 2.1rem;
+  cursor: pointer;
+  font-weight: 700;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+  transition: $transitionSmooth;
+}
+
+.modal-btn:first-child {
+  margin-right: 1rem;
+}
+
+.modal-btn:last-child {
+  margin-left: 1rem;
+}
+
+.modal-cancel-btn {
+  background-color: #595a5e;
+
+  &:hover {
+    background-color: darken(#595a5e, 10%);
+  }
+}
+
+.modal-send-btn {
+  background-color: $aceHelpfulRed;
+
+  &:hover {
+    background-color: darken($aceHelpfulRed, 10%);
+  }
+}
+
 .modal-close-btn {
-    position: relative;
-    width: 35px;
-    height: 35px;
-    background-color: $aceHelpfulRed;
-    border: none;
+  position: relative;
+  width: 35px;
+  height: 35px;
+  background-color: $aceHelpfulRed;
+  border: none;
+}
+  
+.modal-close-btn::before,
+.modal-close-btn::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 35px;
+  height: 3px;
+  background-color: $white;
+}
+  
+.modal-close-btn::before {
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.modal-close-btn::after {
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.modal-close-btn {
+  cursor: $cursorPointer;
+}
+
+@media screen and (min-width: 768px) {
+  .modal-name-container {
+    display: flex;
+    align-items: center;
+    margin-top: 2.3rem;
   }
   
-  .modal-close-btn::before,
-  .modal-close-btn::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 35px;
-    height: 3px;
-    background-color: $white;
+  .modal-input-label:first-child {
+    margin-right: 2rem;
   }
+
+  .modal-input-label:last-child {
+    margin-left: 2rem;
+  }
+} 
+
   
-  .modal-close-btn::before {
-    transform: translate(-50%, -50%) rotate(45deg);
-  }
-  
-  .modal-close-btn::after {
-    transform: translate(-50%, -50%) rotate(-45deg);
-  }
