--- a/assets/css/modal-styles.css
+++ b/assets/css/modal-styles.css
@@ -1,22 +1,26 @@
 .modal {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 0 2rem;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1000;
-  padding: 2rem;
+  overflow-y: auto;
 }
 
 .modal-container {
   max-width: 86rem;
   width: 100%;
-  height: 60.3rem;
+  height: auto;
+  margin: 3rem auto 2rem auto;
   background-color: #fff;
+  border-radius: 10px;
+}
+
+.modal-show {
+  display: block;
 }
 
 .modal-header {
@@ -36,6 +40,121 @@
 
 .modal-content {
   padding: 3rem;
+}
+
+.modal-critical-content, .modal-contact-content {
+  color: #000;
+  font-size: 2.1rem;
+}
+
+.modal-critical-content {
+  margin-bottom: 1.2rem;
+  font-weight: 400;
+}
+
+.modal-contact-content, .help {
+  font-weight: 700;
+}
+
+.modal-contact-content {
+  margin-bottom: 2.1rem;
+}
+
+.modal-contact-number {
+  text-decoration: none;
+  color: #000;
+}
+
+.modal-help {
+  color: #000;
+  font-size: 2.8rem;
+}
+
+.modal-form {
+  padding-left: 0.1rem;
+}
+
+.modal-message {
+  margin-top: 1.2rem;
+  padding: 0.5rem;
+  width: 100%;
+  max-width: 88rem;
+  height: 10rem;
+  border: 1px solid #919191;
+  color: #000;
+  font-family: "Roboto", sans-serif;
+  font-size: 2.1rem;
+}
+
+.modal-input-label {
+  width: 100%;
+}
+
+.modal-input-label label {
+  display: block;
+  margin-bottom: 1rem;
+  color: #707070;
+  font-size: 18px;
+  font-weight: 400;
+  font-family: Roboto;
+}
+
+.modal-input-label input {
+  width: 100%;
+  height: 5rem;
+  margin-right: 0.2rem;
+  padding: 1rem;
+  font-size: 17px;
+}
+
+.modal-input-label input:first-child {
+  margin-right: 2rem;
+}
+
+.modal-input-label label span {
+  color: #d40029;
+}
+
+.modal-btn-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 1.7rem;
+}
+
+.modal-btn {
+  height: 5rem;
+  width: 100%;
+  max-width: 23.7rem;
+  color: #fff;
+  border: none;
+  font-family: "Roboto", sans-serif;
+  font-size: 2.1rem;
+  cursor: pointer;
+  font-weight: 700;
+  border-radius: 8px;
+  transition: all 0.4s ease;
+}
+
+.modal-btn:first-child {
+  margin-right: 1rem;
+}
+
+.modal-btn:last-child {
+  margin-left: 1rem;
+}
+
+.modal-cancel-btn {
+  background-color: #595a5e;
+}
+.modal-cancel-btn:hover {
+  background-color: #404144;
+}
+
+.modal-send-btn {
+  background-color: #d40029;
+}
+.modal-send-btn:hover {
+  background-color: #a1001f;
 }
 
 .modal-close-btn {
@@ -63,4 +182,22 @@
 
 .modal-close-btn::after {
   transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.modal-close-btn {
+  cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .modal-name-container {
+    display: flex;
+    align-items: center;
+    margin-top: 2.3rem;
+  }
+  .modal-input-label:first-child {
+    margin-right: 2rem;
+  }
+  .modal-input-label:last-child {
+    margin-left: 2rem;
+  }
 }/*# sourceMappingURL=modal-styles.css.map */
