--- a/src/styles/icon-styles/icon-styles.scss
+++ b/src/styles/icon-styles/icon-styles.scss
@@ -2,16 +2,31 @@
 
 /////// Icons Section ///////
 .icon {
+    white-space: nowrap;
     background-color: $white;
+    @include marginCenter;
+    overflow-x: auto;
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+    user-select: none;
+    
+    @media screen and (min-width: 1075px) {
+        white-space: normal;
+    }
+}
+
+.icon::-webkit-scrollbar {
+    display: none;  /* Safari and Chrome */
 }
 
 .icon-container {
-    display: block;
-    padding: 2.5rem 0 1.5rem 0;
-    @include marginCenter;
-    @include scrollHorizontal;
-    user-select: none;
-
+    display: inline-block;
+    width: 10rem;
+    margin: 2.5rem 1.7rem;
+    vertical-align: top;
+    white-space: normal;
+    cursor: $cursorPointer;
+    
     @media screen and (min-width: 768px) {
         user-select: auto;
     }
@@ -44,7 +59,7 @@
     align-items: center;
     border: 1px solid #d40029;
     transition: ease all .4s;
-
+    
     &:hover {
         animation: pulse-animation 1.3s infinite;
     }
@@ -76,7 +91,7 @@
     .icon-image {
         width: 3.6rem;
         height: 3.6rem;
-    }
+    }   
 }
 
 .icon-content.active .icon-img-container {
