--- a/src/styles/pills-styles/pills-styles.scss
+++ b/src/styles/pills-styles/pills-styles.scss
@@ -9,7 +9,6 @@
     @include scrollHorizontal;
     @include marginCenter;
     padding: 0 0 1.5rem 0;
-    // display: none;
     
     @media screen and (min-width: 768px) {
         white-space: normal;
@@ -35,9 +34,10 @@
     -webkit-transition: ease all .4s;
     -moz-transition: ease all .4s;
     transition: ease all .4s;
-    -webkit-user-select: none;
+      -webkit-user-select: none;
     -moz-user-select: none;
     user-select: none;
+    // pointer-events: none;
   
     &:hover {
         background: #eee;
