--- a/src/styles/global-styles/global-styles.scss
+++ b/src/styles/global-styles/global-styles.scss
@@ -16,6 +16,7 @@ $fontWeight400: 400;
 $transitionSmooth: all .4s ease;
 
 $cursorPointer: pointer;
+$textUnderline: underline;
 
 // Mixins
 @mixin marginCenter {
